--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
 
       <footer>
-        <p>This project is maintained by <a href="http://github.com/basp-group”>gasp-group</a></p>
+        <p>This project is maintained by <a href="http://github.com/basp-group”>basp-group</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
