--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h4>Article</h4>
 <p>J. Birdi, A. Repetti, and Y. Wiaux - Sparse interferometric Stokes imaging under polarization constraint (Polarized SARA), accepted for publication in MNRAS, 2018</p>
         
-
+      </section>
       <footer>
         <p>This project is maintained by <a href="http://github.com/basp-group”>basp-group</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
