--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </ul>
         
 <h4>Article</h4>
-<p>J. Birdi, A. Repetti, and Y. Wiaux - Sparse interferometric Stokes imaging under polarization constraint (Polarized SARA), accepted for publication in MNRAS, 2018</p>
+<p>J. Birdi, A. Repetti, and Y. Wiaux - Sparse interferometric Stokes imaging under polarization constraint (Polarized SARA), Mon. Not. Roy. Astron. Soc., 478(4):4442-4463, 2018. </p>
         
 </section>
       <footer>
